# QtRealTimeVideoProcecss

./: .gitignore  CMakeLists.txt  README.md
main/: main.cpp
main/magnification/: Magnificator.h  TemporalFilter.h
main/threads/: CaptureThread.h  PlayerThread.h  ProcessingThread.h
main/ui/: CameraConnectDialog.cpp  CameraConnectDialog.h  CameraView.cpp  CameraView.h  FrameLabel.cpp  MagnifyOptions.cpp  MainWindow.cpp  MainWindow.h  VideoView.h
